--- a/Diplomka/css/footer.css
+++ b/Diplomka/css/footer.css
@@ -1,113 +1,89 @@
 .footer__inner {
-    padding-top: 60px;
-}
 
-.footer__info,
-.footer__grid {
-    padding-left: clamp(20px, 8vw, 80px);
 }
-
+.footer__container {
+    width: 76vw;
+    margin: 0 auto;
+}
 .footer__info {
+    padding-top: 4.16vw;
     display: flex;
     justify-content: space-between;
-    gap: 30px;
-    white-space: nowrap;
+    gap: clamp(10px,1vw,30px);
 }
-
 .footer__info-inner {
     display: flex;
     flex-direction: column;
+    gap: 1vw;
+    width: clamp(40px, 27.3vw, 500px);
 }
-
 .footer__title {
-    font-family: Causten;
-    font-size: 28.5px;
+    white-space: nowrap;
+    font-size: var(--twenty-eight);
     font-weight: 700;
 }
-
 .footer__info-text {
-    transition: var(--transition);
-    padding: 10px 0;
+    font-size: var(--eighteen);
 }
+.footer__flex {
 
-.footer__info-text:hover {
-    color: #7c7c7c;
 }
-
+.footer__download-title {
+    display: flex;
+    justify-content: end;
+    padding-right: 14.5%;
+    padding-top: 2vw;
+}
+.footer__soc {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 2vw;
+}
 .socials__footer {
     display: flex;
-    gap: 10px;
-    grid-row: 2/3;
+    gap: 0.8vw;
 }
 
 .social__footer-link {
     display: flex;
-    width: 37px;
-    height: 37px;
+    width: clamp(16px, 2.57vw, 50px);
+    height: clamp(16px, 2.57vw, 50px);
     background: var(--general-bg);
     border: 1px solid transparent;
-    border-radius: 10.5px;
+    border-radius: .7vw;
     align-items: center;
     justify-content: center;
 
     transition: var(--transition);
 }
+.social__footer-link img {
+    width: clamp(10px, 1.23vw, 30px);
+    height: clamp(10px, 1.23vw, 30px);
+}
 .social__footer-link:hover {
     border: 1px solid #000000;
 }
-
-.footer__grid {
-    display: grid;
-    grid-template-columns: 1.3fr 1fr;
-    grid-template-rows: 2fr 1fr;
-    padding-bottom: 44px;
-}
-
 .footer__download {
-    grid-column: 2/3;
-    grid-row: 2/3;
-    display: grid;
-    grid-template-columns: .4fr 1fr;
-    gap: 0px 30px;
+    padding-right: 6vw;
 }
-
-.footer__download-title {
-    display: flex;
-    padding-right: 24.3%;
-    grid-column: 2/3;
-    grid-row: 1/2;
-}
-
 .footer__download-play {
-    min-width: 154px;
-    display: grid;
-    grid-template-columns: 40px auto;
-    grid-template-rows: 20px 20px;
-    align-items: center;
+    
 }
-
 .footer__download-img {
-    grid-row: 1/3;
+    width: clamp(51px, 10.7vw, 200px);
+    height: clamp(30px,3.54vw,60px);
 }
-
-.footer__download-text {
-    grid-row: 1/2;
-    font-size: 10px;
-}
-
 .footer__download-app {
-    min-width: 154px;
-    display: grid;
-    grid-template-columns: 40px auto;
-    grid-template-rows: 20px 20px;
-    align-items: center;
 }
+
+
 
 .footer__accordion-inner {
     background-color: var(--black-text);
     cursor: pointer;
-    padding: 18px;
-    padding-left: 80px;
+    padding: 1.3vw;
+    padding-left: 5.27vw;
     width: 100%;
     border-top: solid 1px #BEBCBD;
     border-bottom: solid 1px #BEBCBD;
