--- a/Diplomka/css/global.css
+++ b/Diplomka/css/global.css
@@ -7,13 +7,13 @@
     --purple: #8A33FD;
     --transition: all .4s;
     /* ================  font-size adaptive  */
-    --twenty-twofz: clamp(8px, 1.6vw, 36px);
-    --sixteen: clamp(6px, 1.1vw, 22px);
-    --thirty-four: clamp(10px, 2.4vw, 55px);
-    --eighteen: clamp(8px, 1.25vw, 26px);
-    --twenty: clamp(10px, 1.4vw, 30px);
-    --twenty-eight: calc(18px + 10 * (100vw / 1440));
-    --fourteen: calc(10px + 4 * (100vw / 1440));
+    --twenty-twofz: clamp(8px, 1.6vw, 40px);
+    --sixteen: clamp(6px, 1.1vw, 28px);
+    --thirty-four: clamp(9px, 2.4vw, 55px);
+    --eighteen: clamp(6px, 1.25vw, 30px);
+    --twenty: clamp(6px, 1.4vw, 36px);
+    --twenty-eight: clamp(10px,1.95vw, 46px);
+    --fourteen: clamp(5px, .97vw, 26px);
 }
 
 .body {
