--- a/Diplomka/css/header.css
+++ b/Diplomka/css/header.css
@@ -4,6 +4,7 @@
     font-family: Causten;
     font-size: var(--twenty-twofz);
     font-weight: 500;
+    border-bottom: solid 1px var(--grey-text);
 }
 
 .header__inner {
