--- a/Diplomka/css/list_page.css
+++ b/Diplomka/css/list_page.css
@@ -53,7 +53,7 @@
     height: clamp(8px, 2vw, 40px);
 }
 .filter__arrow {
-    height: clamp(3px, .7vw, 20px);
+    height: clamp(8px, .7vw, 30px);
     transform: rotate(-90deg);
     transition: var(--transition);
 }
@@ -201,8 +201,8 @@ input[type="range"]:active::-webkit-slider-thumb{
     justify-content: center;
 }
 .color__type {
-    width: 2.55vw;
-    height: 2.55vw;
+    width: clamp(28px, 2.55vw, 60px);
+    height: clamp(28px, 2.55vw, 60px);
     border: 1px solid rgb(244, 241, 241);
     border-radius: 12px;
 }
@@ -254,6 +254,10 @@ input[type="range"]:active::-webkit-slider-thumb{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     gap: 20px;
+}
+
+.filter__mobile {
+    display: none;
 }
 .size__item {
     border-radius: 8px;
@@ -337,6 +341,9 @@ input[type="range"]:active::-webkit-slider-thumb{
 .price {
 }
 .price__inner {
+    white-space: nowrap;
+    overflow: hidden;
+
     padding: 3vw 0 7vw 0;
     /* max-width: 74%; */
     margin: 0 auto;
@@ -357,9 +364,12 @@ input[type="range"]:active::-webkit-slider-thumb{
     padding-left: 6vw;
 }
 .price__text {
+    overflow: hidden;
+    text-overflow: ellipsis;
     color: var(--grey-text);
     font-size: var(--twenty-twofz);
     padding: 1vw 0 0 13%;
+    max-width: clamp(100px, 55vw, 1000px);
 }
 .price__text--right {
     border-left: 1px solid var(--light-gray);
