--- a/Diplomka/css/style.css
+++ b/Diplomka/css/style.css
@@ -614,7 +614,7 @@
 
 .feedback__slide-inner {
     overflow: hidden;
-    height: clamp(200px,20.4vw,500px);
+    height: clamp(200px, 20.4vw, 500px);
     padding: 1.6vw 1.6vw;
     border: 1.8px solid #bebcbd;
     border-radius: 10px;
@@ -630,7 +630,7 @@
     height: 4vw;
 }
 
-.feedback__slide-rating img{
+.feedback__slide-rating img {
     width: 1.6vw;
     height: 1.6vw;
 }
@@ -710,6 +710,7 @@
         inset: 0;
         z-index: 11;
         background: rgba(125, 201, 245, 0.938);
+        overflow-y: scroll;
 
         transform: translateY(-50%);
         opacity: 0;
@@ -718,7 +719,6 @@
     }
 
     .header__nav-shop-list {
-        line-height: 8vh;
         gap: 3vh;
         flex-direction: column;
         text-align: center;
@@ -749,25 +749,117 @@
     .burger-icon {
         display: flex;
     }
+
     /* ====== */
     .feedback__slide-info {
         font-size: clamp(10px, 1vw, 14px)
     }
+
     .feedback__slide-name {
-        font-size: clamp(16px,1.6vw, 22px);
-        padding: clamp(5px,3vw,10px) 0;
+        font-size: clamp(16px, 1.6vw, 22px);
+        padding: clamp(5px, 3vw, 10px) 0;
     }
+
     .feedback__slide-img {
         width: clamp(32px, 10vw, 60px);
         height: clamp(32px, 10vw, 60px);
     }
-    
-    .feedback__slide-rating img{
+
+    .feedback__slide-rating img {
         width: clamp(16px, 5vw, 20px);
         height: clamp(16px, 5vw, 20px);
     }
+
     .feedback__pagination {
         bottom: 7% !important;
+    }
+
+    /* ============================= */
+
+    .filter__inner {
+        max-width: 100%;
+        position: fixed;
+        inset: 0;
+        z-index: 12;
+        background: rgb(255, 255, 255);
+        overflow-y: scroll;
+
+        transform: translateX(-70%);
+        opacity: 0;
+        visibility: hidden;
+        transition: var(--transition);
+    }
+
+    .body--opened-filter .filter__inner {
+        transform: translateY(0);
+        opacity: 1;
+        visibility: visible;
+    }
+    .body--opened-filter {
+        overflow: hidden;
+    }
+
+    .cart-page__products .limelight__img {
+        width: 26.6vw;
+        height: 38vw;
+    }
+
+    .cart-page__products .limelight__link {
+        max-width: 26.6vw;
+    }
+
+    .filter__mobile {
+        display: flex;
+        gap: 5px;
+    }
+
+    .filter__icon {
+        height: clamp(15px, 2.5vw, 30px);
+    }
+
+    .cart-page__links {
+        gap: 3vw;
+    }
+
+    .body--opened-filter {}
+
+    #filterMain {
+        font-size: 30px;
+    }
+
+    .filter__title {
+        font-size: 24px;
+    }
+
+    .typeof__link {
+        font-size: 16px;
+    }
+
+    #range1,
+    #range2 {
+        font-size: 20px;
+        width: clamp(120px, 6.9vw, 200px);
+        height: clamp(45px, 2.2vw, 60px);
+    }
+    .filter__colors {
+        font-size: 20px;
+    }
+    .color__type {
+        width: 50px;
+        height: 50px;
+        border-radius: 24px;
+    }
+    .filter__size {
+        align-items: center;
+        justify-items: center;
+        font-size: 20px;
+    }
+    .size__item {
+        height: 50px;
+        width: 100px;
+    }
+    .online__text {
+        line-height: 12px;
     }
 }
 
@@ -817,6 +909,7 @@
 
     .fashion__text {
         max-width: 85%;
+        top: 12%;
     }
 
     /* === */
@@ -825,12 +918,12 @@
     }
 
     .formen__img {
-        max-width: 35vw;
-        max-height: 50vw;
+        max-width: 42vw;
+        max-height: 60vw;
     }
 
     .formen__info {
-        max-width: 35vw;
+        max-width: 42vw;
     }
 
     .formen__text {
@@ -858,17 +951,32 @@
     }
 
     .limelight__img {
-        width: 35vw;
-        height: 50vw;
+        width: 42vw;
+        height: 60vw;
     }
 
     .limelight__icon {
-        right: 14%;
+        right: 7%;
     }
 
     .limelight__link {
-        max-width: 35vw;
+        max-width: 42vw;
     }
+
+    .cart-page__products .limelight__img {
+        width: 26.6vw;
+        height: 38vw;
+    }
+
+    .cart-page__products .limelight__link {
+        max-width: 26.6vw;
+    }
+
+    .cart-page__products .limelight__icon {
+        right: 7%;
+    }
+
+
 
     .limelight__title {
         font-size: clamp(10px, 1vw, 20px);
@@ -881,7 +989,12 @@
     .limelight__price {
         font-size: clamp(8px, 1vw, 20px);
     }
+
     .feedback__pagination {
         bottom: 0 !important;
+    }
+
+    .cart-page__products {
+        gap: 3vw;
     }
 }
